api(feat): add lab analysis data
