# api/docs/openapi.yaml
@@ -90,7 +90,7 @@ paths:
       summary: Mobile user register
       description: Register a mobile device user
       tags:
-        - api
+        - mobile
       operationId: createMobileUser
       requestBody:
         content:
@@ -117,13 +117,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/DatabaseErrorResponse'
 
-  /quarantined:
-    post:
+  /quarantined/{mobileUserId}:
+    put:
       summary: Quarantined change
       description: Marks if the user needs to be quarantined
       tags:
-        - api
+        - mobile
       operationId: changeQuarantinedStatus
+      parameters:
+        - in: path
+          name: mobileUserId
+          schema:
+            type: string
+          required: true
+          description: Mongo unique user identifer
       requestBody:
         content:
           application/json:
@@ -157,13 +164,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DatabaseErrorResponse'
-
-  /quarantined/{mobileUserId}:
     get:
       summary: Quarantined check
       description: Checks if the user is quarantined
       tags:
-        - api
+        - mobile
       operationId: getQuarantinedStatus
       parameters:
         - in: path
@@ -324,7 +329,7 @@ paths:
       summary: Store access
       description: Checks if one user can access to store
       tags:
-        - api
+        - mobile
       operationId: getStoreAccess
       parameters:
         - in: path
@@ -369,7 +374,7 @@ paths:
       summary: Quiz register
       description: Register a new quiz
       tags:
-        - api
+        - mobile
       operationId: createQuiz
       requestBody:
         content:
@@ -399,7 +404,7 @@ paths:
       summary: All quizzes
       description: Retrieves all quizzes
       tags:
-        - api
+        - ai
       operationId: getAllQuizzes
       responses:
         '200':
@@ -430,7 +435,7 @@ paths:
       summary: Bluetooth data
       description: Add bluetooth data every 15 secs
       tags:
-        - api
+        - mobile
       operationId: addBluetoothData
       requestBody:
         content:
@@ -460,7 +465,7 @@ paths:
       summary: All bluetooth data
       description: Retrieves all bluetooth data
       tags:
-        - api
+        - ai
       operationId: getBluetoothData
       responses:
         '200':
