# api/src/lab-analysis/model/ILabAnalysisModel.ts
@@ -1,0 +1,8 @@
+import { Document, Schema } from "mongoose";
+
+export interface ILabAnalysisModel extends Document {
+  mobileUserId: Schema.Types.ObjectId;
+  labName: string;
+  status: boolean;
+  createdAt: Date;
+}
